<resources>
    <string name="app_name">Практика №5-6 Багров</string>
    <string name="textViewName">Багров Андрей</string>
    <string name="textViewNewYear">С новым годом!</string>
    <string name="buttonNewYear">Новогодние картинки</string>
    <string name="buttonAboutNewYear">Про Новый год</string>
    <string name="buttonWhat">А это что ещё за страница???</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="TextNewYear">Новый год — главный календарный праздник, наступающий в момент перехода с последнего дня года в первый день следующего года. Отмечается многими народами в соответствии с принятым календарём. Начало года с 1 января было установлено римским правителем Юлием Цезарем в 46 году до нашей эры. В Древнем Риме этот день был посвящён Янусу — богу выбора, дверей и всех начал. Месяц январь получил своё название в честь бога Януса, которого изображали с двумя лицами: одно смотрело вперёд, а другое — назад. Большинство стран отмечает Новый год 1 января, в первый день года по григорианскому календарю. Новогодние празднования с учётом поясного времени всегда начинаются в Тихом океане на островах Кирибати. Последними провожают старый год жители островов Мидуэй в Тихом океане. Некоторые страны отмечают Новый год по лунному календарю. С 1-го января Новый год впервые отмечается в 153 году до н. э., поскольку с этого дня вступали в должность римские консулы. В 46 году до н. э. римский полководец и верховный жрец Гай Юлий Цезарь ввёл свой новый календарь («юлианский») и окончательно утвердил начало года с 1 января 45 года до н. э. Именно при Цезаре под влиянием астрологии праздник Нового года приобрёл самостоятельное значение временной отметки начала года и, таким образом, положил начало гражданскому году. При праздновании Нового года активно используются разнообразные пиротехнические изделия: хлопушки, бенгальские огни и, в последнее десятилетие, — салюты, ракеты, римские свечи, петарды большие и малые и др. Пользоваться пиротехническими изделиями для празднования Нового года начали в странах Азии, и, в первую очередь, — в Китае, так как считалось, что громкий шум и яркий свет, получаемые от взрывов пороха, позволяют отогнать злых духов. Позже данная традиция распространилась по всему миру. Самой известной в разных странах традицией, образовавшейся из-за суеверия, является зажигание на Новый год в Китае фейерверков, а также взрывы петард, которые не прекращаются на протяжении всего первого новогоднего дня. При этом сам порох, петарды и фейерверки были изобретены не так давно, но традиции создавать шум и гам при встрече Нового года приписывается тысячелетняя история. Все началось с легенды о том, что в канун Нового года злые духи, изгнанные из разных мест, ищут себе новое пристанище, а найдя подходящий дом, селятся в нём и весь предстоящий год чинят хозяевам разные беды. Шум же при встрече Нового года призван отогнать зло от дома. В настоящее время многие столицы мира или даже отдельные страны тратят миллионы долларов, чтобы устроить пиротехническое шоу на Новый год. Использование пиротехнических изделий в большом количестве, в том числе несовершеннолетними, создаёт потенциально пожароопасную и травмоопасную ситуацию, поэтому новогодняя ночь считается наиболее напряжённым периодом года в работе противопожарных и спасательных служб.</string>
    <string name="Main">Главная страница</string>
    <string name="ButtonMainTwo">Главная страница</string>
    <string name="textTrap" translatable="false">It\'s a trap</string>
</resources>
