<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFEB3B"
        tools:context=".MainActivity">

    <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/textViewName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="8dp"
                    android:foregroundGravity="top|center"
                    android:gravity="top|center_horizontal"
                    android:text="@string/textViewName"
                    android:textSize="25sp"
                    android:textStyle="bold" />


            <TextView
                    android:id="@+id/textViewNewYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:foregroundGravity="top|center"
                    android:gravity="top|center_horizontal"
                    android:text="@string/textViewNewYear"
                    android:textSize="20sp"
                    android:textStyle="italic" />

            <ImageView
                    android:id="@+id/imageViewSaniTwo"
                    android:layout_width="match_parent"
                    android:layout_height="125dp"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/sani_two" />

            <Button
                    android:id="@+id/buttonNewYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@android:color/holo_red_dark"
                    android:gravity="center|center_horizontal"
                    android:text="@string/buttonNewYear"
                    android:textColor="@android:color/white" />

            <Button
                    android:id="@+id/buttonAboutNewYear"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@android:color/holo_blue_dark"
                    android:foregroundGravity="center_horizontal"
                    android:gravity="center|center_horizontal"
                    android:text="@string/buttonAboutNewYear"
                    android:textColor="@android:color/white" />

            <Button
                    android:id="@+id/buttonWHAT"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@android:color/holo_green_dark"
                    android:foregroundGravity="top|center"
                    android:gravity="center|center_horizontal"
                    android:text="@string/buttonWhat"
                    android:textColor="@android:color/white" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                <ImageView
                        android:id="@+id/imageViewSnow"
                        android:layout_width="180dp"
                        android:layout_height="200dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="16dp"
                        android:contentDescription="@string/todo"
                        android:foregroundGravity="top|center"
                        android:gravity="start|top"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/first" />

                <ImageView
                        android:id="@+id/imageViewEli"
                        android:layout_width="180dp"
                        android:layout_height="200dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        android:contentDescription="@string/todo"
                        android:foregroundGravity="top|center"
                        android:gravity="top|end"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/second" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>